fix(modal): handle overflowing content (#244)

--- a/src/Modal/Modal.scss
+++ b/src/Modal/Modal.scss
@@ -3,13 +3,27 @@
 @import "~bootstrap/scss/_grid";
 @import "~bootstrap/scss/_utilities";
 
-.modal-open {
-  display: block;
+.modal.show {
+  position: fixed;
+  background-color: transparent;
+  max-height: 100%;
+  width: 100%;
 
   &:focus {
     .modal-dialog {
       box-shadow: $btn-focus-box-shadow;
     }
+  }
+}
+
+.modal.is-ie11 {
+  // fix browser that likes to do things its own way
+  overflow-y: scroll;
+  height: auto;
+
+  .modal-content {
+    height: auto;
+    max-height: none;
   }
 }
 
@@ -19,4 +33,30 @@
   // Fade for backdrop
   &.fade { opacity: 0; }
   &.show { opacity: 1; }
+}
+
+.modal-dialog {
+  height: 100%;
+  margin: auto;
+  padding: $spacer / 2;
+
+  @media (min-width: map-get($grid-breakpoints, 'sm')) {
+    padding: $spacer;
+  }
+}
+
+.modal-content {
+  max-height: 100%;
+}
+
+.modal-header {
+  flex: 0 0 auto;
+}
+
+.modal-body {
+  overflow: auto;
+}
+
+.modal-footer {
+  flex: 0 0 auto;
 }
